--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>London Trip</title>
 </head>
 <body>
+
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <div>
+            <img src="pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="pexels-bill-emrich-230794-1.jpg" alt="">
+            <img src="pexels-bill-emrich-230794-2.jpg" alt="">
+        </div>
+    </header>
     
 </body>
 </html>
