--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>London Trip</title>
 </head>
 <body>
-
+    <!-- header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
         <div>
@@ -15,7 +15,48 @@
             <img src="pexels-bill-emrich-230794-1.jpg" alt="">
             <img src="pexels-bill-emrich-230794-2.jpg" alt="">
         </div>
+        <hr>
     </header>
+
+    <!-- main -->
+    <main>
+        <!-- inizio tabella -->
+        <table>
+            <!-- prima riga -->
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+            <!-- seconda riga -->
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            </tr>
+            <!-- terza riga -->
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            </tr>
+            <!-- quarta riga -->
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            </tr>
+            <!-- quinta riga -->
+            <tr>
+                <td>Totale</td>
+                <td></td>
+                <td>360€</td>
+            </tr>
+        </table>
+        <!-- fine tabella -->
+        <hr>
+        
+    </main>
     
 </body>
 </html>
