--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- main -->
     <main>
+        <h2>Le mie spese</h2>
         <!-- inizio tabella -->
         <table>
             <!-- prima riga -->
@@ -56,6 +57,17 @@
         <!-- fine tabella -->
         <hr>
         
+        <!-- sezione "cose da fare" -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li> Visitare la Tower of London &#x2718 </li>
+                <li> Visitare greenwich &#x2714 </li>
+                <li> Ascoltare un artista di strada a Covent Garden &#x2714 </li>
+                <li> Mangiare il tipico fish and chips inglese &#x2718 </li>
+            </ul>
+        </section>
+
     </main>
     
 </body>
