--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
             </ul>
         </section>
 
+        <!-- sezione "info" -->
+        <section>
+            <h3>Info utili:</h3>
+
+            <ol>
+                <!-- lista numeri -->
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenze</li>
+                        <li><strong>111</strong> - Numero polizia</li>
+                        <li><strong>101</strong> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <!-- lista hotel -->
+                <li>
+
+                </li>
+                <!-- lista aerei -->
+                <li>
+
+                </li>
+            </ol>
+        </section>
+
     </main>
     
 </body>
