--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                     </ul>
                 </li>
                 <!-- lista hotel -->
+                    Hotel
+                    <ul>
+                        <li><strong>Numero Hotel:</strong> Backingham Palace</li>
+                        <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
                 <li>
 
                 </li>
