creare lista aerei

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
                 </li>
                 <!-- lista aerei -->
                 <li>
-
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di andata:</strong> YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno: </strong> YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
                 </li>
             </ol>
         </section>
