--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <section>
             <h3>Cose da fare</h3>
             <ul>
-                <li> Visitare la Tower of London &#x2718 </li>
-                <li> Visitare greenwich &#x2714 </li>
-                <li> Ascoltare un artista di strada a Covent Garden &#x2714 </li>
-                <li> Mangiare il tipico fish and chips inglese &#x2718 </li>
+                <li> Visitare la Tower of London &#x2718; </li>
+                <li> Visitare greenwich &#x2714; </li>
+                <li> Ascoltare un artista di strada a Covent Garden &#x2714; </li>
+                <li> Mangiare il tipico fish and chips inglese &#x2718; </li>
             </ul>
             <hr>
         </section>
